<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:elevation="10dp"
    android:layout_margin="7dp"
    app:cardCornerRadius="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cardview_light_background">

        <RelativeLayout
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/rec_meal_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/meal_imagesrc" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:padding="5dp">

            <TextView
                android:id="@+id/rec_meal_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meal_title_placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ln_layout_footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/rec_meal_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/meal_info_placeholder"
                android:textSize="12sp" />

        </RelativeLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>
